<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<packaging>pom</packaging>

	<groupId>ru.loolzaaa</groupId>
	<artifactId>sso-client</artifactId>
	<version>0.6.0</version>

	<name>Single Sign-On Authentication Server Client</name>

	<modules>
		<module>sso-client-core</module>
		<module>sso-client-spring-boot-autoconfigure</module>
		<module>sso-client-spring-boot-starter</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>11</java.version>
		<spring.boot.version>2.7.3</spring.boot.version>
		<httpclient.version>4.5.13</httpclient.version>
		<jjwt.version>0.9.1</jjwt.version>
		<jakarta.xml.bind-api.version>2.3.3</jakarta.xml.bind-api.version>
		<sonar.organization>loolzaaa</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
	</properties>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.9.0</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M5</version>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.8</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub loolzaaa Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/loolzaaa/sso-authentication-client</url>
		</repository>
	</distributionManagement>

</project>
